--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                                         <div style="color:#bfc0c4;" class="about-text">
                                             <p>
                                                 Üç senedir profesyonel olmak üzere yedi senedir yazılım geliştiyorum.
-                                                Geliştirdiğim otuzun üzerinde yayınlanmış oyunum bulunmakta. Oyun geliştirme süreçlerinizde size yardımcı olabilirim.
+                                                Geliştirdiğim kırkın üzerinde yayınlanmış oyunum bulunmakta. Oyun geliştirme süreçlerinizde size yardımcı olabilirim.
                                             </p>
                                         </div>
                                     </div>
