--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
     <div class="code-table ">
         <div class="code-table-nav">
             <div class="tab-container">
-                <div class="tab tab-active"><span style="color: yellow; "><i
-                            class="fa-brands fa-js"></i></span>PlayerController.cs</div>
+                <div class="tab tab-active"><span style="color: yellow; "></span>PlayerController.cs</div>
                 <div class="tab"><span style="color: skyblue; ">#</span>GameManager.cs</div>
                 <div class="tab"><span style="color: orangered; ">
                         <>
