--- a/index.html
+++ b/index.html
@@ -206,11 +206,14 @@
     <div class="code-table ">
         <div class="code-table-nav">
             <div class="tab-container">
-                <div class="tab tab-active"><span style="color: yellow; "></span>PlayerController.cs</div>
+                <div class="tab tab-active"><span style="color: yellow; "></span></div>
+                <div class="tab"><span style="color: skyblue; ">#</span>PlayerController.cs</div>
                 <div class="tab"><span style="color: skyblue; ">#</span>GameManager.cs</div>
-                <div class="tab"><span style="color: orangered; ">
+                <div class="tab">
+                    <span style="color: orangered; ">
                         <>
-                    </span> level.html</div>
+                    </span> level.html
+                </div>
             </div>
         </div>
         <div class="code-table-code-container">
