--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Edu+SA+Beginner:wght@600&family=Inconsolata&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
-    <script src="https://kit.fontawesome.com/607e4879ac.js" crossorigin="uguralpyildiz"></script>
+    <script src="https://kit.fontawesome.com/607e4879ac.js" crossorigin="huseyinoztuna"></script>
     <meta name="title" content="Hüseyin Öztuna - Game Developer">
     <meta
-        content="7 yılı aşkın süredir yazılım geliştiriyorum. Son 3 yıldır profesyonel olarak oyun geliştirme alanında aktif şekilde çalışıyorum. Mobil ve PC platformları için 40’ın üzerinde oyunu başarıyla geliştirip yayınladım. Proje sürecinde oyun mekaniği tasarımı, performans optimizasyonu, monetizasyon stratejileri, kullanıcı deneyimi (UX), yayınlama ve mağaza optimizasyonu (ASO / SEO) konularında uçtan uca deneyime sahibim."
+        content="7 yılı aşkın süredir yazılım geliştiriyorum. Son 3 yıldır profesyonel olarak oyun geliştirme alanında aktif şekilde çalışıyorum. Mobil ve PC platformları için 40’ın üzerinde oyunu başarıyla geliştirip yayınladım."
         name="description">
     
     <meta name="robots" content="index, follow">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta property="og:title" content="Hüseyin Öztuna - Game Developer">
     <meta property="og:description"
-        content="7 yılı aşkın süredir yazılım geliştiriyorum. Son 3 yıldır profesyonel olarak oyun geliştirme alanında aktif şekilde çalışıyorum. Mobil ve PC platformları için 40’ın üzerinde oyunu başarıyla geliştirip yayınladım. Proje sürecinde oyun mekaniği tasarımı, performans optimizasyonu, monetizasyon stratejileri, kullanıcı deneyimi (UX), yayınlama ve mağaza optimizasyonu (ASO / SEO) konularında uçtan uca deneyime sahibim.">
+        content="7 yılı aşkın süredir yazılım geliştiriyorum. Son 3 yıldır profesyonel olarak oyun geliştirme alanında aktif şekilde çalışıyorum. Mobil ve PC platformları için 40’ın üzerinde oyunu başarıyla geliştirip yayınladım.">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Hüseyin Öztuna - Game Developer</title>
 
