--- a/index.html
+++ b/index.html
@@ -402,16 +402,13 @@
                                             </div>
 
                                             <div class="skill-bar">
-                                                <div class="skill-bar-dot"></div>Post-processing
+                                                <div class="skill-bar-dot"></div>Shader Basics
                                             </div>
                                             <div class="skill-bar">
                                                 <div class="skill-bar-dot"></div>Particle effects
                                             </div>
                                             <div class="skill-bar">
-                                                <div class="skill-bar-dot"></div>UI / HUD
-                                            </div>
-                                            <div class="skill-bar">
-                                                <div class="skill-bar-dot"></div>Shader Basics
+                                                <div class="skill-bar-dot"></div>Post-processing
                                             </div>
                                         </div>
                                     </div>
@@ -434,13 +431,10 @@
                                                 <div class="skill-bar-dot"></div>Unity (C#)
                                             </div>
                                             <div class="skill-bar">
-                                                <div class="skill-bar-dot"></div>Visual Studio
-                                            </div>
-                                            <div class="skill-bar">
-                                                <div class="skill-bar-dot"></div>Performance (FPS)
-                                            </div>
-                                            <div class="skill-bar">
                                                 <div class="skill-bar-dot"></div>Game Logic
+                                            </div>
+                                            <div class="skill-bar">
+                                                <div class="skill-bar-dot"></div>Optimization
                                             </div>
                                         </div>
                                     </div>
