--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                                 <div class="ref-card">
                                     <div class="ref-media">
                                         <iframe style="border-radius: 11px; margin-bottom: 15px;" width="100%" height="300"
-                                            src="https://www.youtube.com/embed/HFVbFs44e9w?autoplay=1&mute=1&loop=1&playlist=HFVbFs44e9w&controls=0&modestbranding=1&rel=0"
+                                            src="https://www.youtube.com/embed/watch?v=Jbc7TPMDRI0?autoplay=1&mute=1&loop=1&playlist=HFVbFs44e9w&controls=0&modestbranding=1&rel=0"
                                             title="Modos 0.1" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture"
                                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                                         </iframe>
@@ -623,7 +623,7 @@
                                 <div class="ref-card">
                                     <div class="ref-media">
                                         <iframe style="border-radius: 11px; margin-bottom: 15px;" width="100%" height="300"
-                                            src="https://www.youtube.com/embed/HFVbFs44e9w?autoplay=1&mute=1&loop=1&playlist=HFVbFs44e9w&controls=0&modestbranding=1&rel=0"
+                                            src="https://www.youtube.com/embed/watch?v=8yfcW3d9gmU?autoplay=1&mute=1&loop=1&playlist=HFVbFs44e9w&controls=0&modestbranding=1&rel=0"
                                             title="Modos 0.1" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture"
                                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                                         </iframe>
@@ -649,7 +649,7 @@
                                 <div class="ref-card">
                                     <div class="ref-media">
                                         <iframe style="border-radius: 11px; margin-bottom: 15px;" width="100%" height="300"
-                                            src="https://www.youtube.com/embed/HFVbFs44e9w?autoplay=1&mute=1&loop=1&playlist=HFVbFs44e9w&controls=0&modestbranding=1&rel=0"
+                                            src="https://www.youtube.com/embed/watch?v=jvGAg4-2ols?autoplay=1&mute=1&loop=1&playlist=HFVbFs44e9w&controls=0&modestbranding=1&rel=0"
                                             title="Modos 0.1" frameborder="0" allow="autoplay; encrypted-media; picture-in-picture"
                                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                                         </iframe>
